# auto-harica

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.example.yml  env.sh  harica.sh  init.sh  pyproject.toml  requirements-dev.txt  sectigo.sh  utils.sh
.github/workflows/: build-on-new-tcs-version.yml  docker-image.yml  releases.yml
hooks/: 00-example
